--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@conform-to/react": "^0.4.0",
+    "@conform-to/zod": "^0.4.0",
     "@remix-run/node": "^1.7.4",
     "@remix-run/react": "^1.7.4",
     "@remix-run/serve": "^1.7.4",
     "isbot": "^3.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.4",
